Closed
Bug 400081
Opened 18 years ago
Closed 18 years ago
Leak gfxFont and gfxTextRun with font-size: 0
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta2
People
(Reporter: jruderman, Assigned: cpearce)
References
Details
(Keywords: memory-leak, regression, testcase)
Attachments
(2 files)
|
72 bytes,
text/html
|
Details | |
|
1.07 KB,
patch
|
roc
:
review+
roc
:
superreview+
pavlov
:
approval1.9+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. export XPCOM_MEM_LEAK_LOG=2
2. Run Firefox.
3. Load the testcase.
4. Quit.
Result: trace-refcnt reports that instances of the following classes leaked:
gfxFont, gfxTextRun, gfxTextRunFactory, nsStringBuffer, nsTArray_base
I think this is a regression from within the last week.
Chris, this sounds like you
| Assignee | ||
Comment 2•18 years ago
|
||
Yup, this was me, removing my patch made the leak go away. Taking bug.
Status: NEW → ASSIGNED
Updated•18 years ago
|
Assignee: nobody → chris
Status: ASSIGNED → NEW
| Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•18 years ago
|
||
Added a textrun release on a control path that must have not be being hit before.
Attachment #285273 -
Flags: review?(roc)
Attachment #285273 -
Flags: superreview+
Attachment #285273 -
Flags: review?(roc)
Attachment #285273 -
Flags: review+
Attachment #285273 -
Flags: approval1.9+
Comment on attachment 285273 [details] [diff] [review]
Patch v1 - added a gfxTextRun release
rerequest approval when we get out of tree-red state
Attachment #285273 -
Flags: approval1.9+ → approval1.9?
Updated•18 years ago
|
Attachment #285273 -
Flags: approval1.9? → approval1.9+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 5•18 years ago
|
||
Checking in layout/generic/nsTextFrameThebes.cpp;
/cvsroot/mozilla/layout/generic/nsTextFrameThebes.cpp,v <-- nsTextFrameThebes.cpp
new revision: 3.127; previous revision: 3.126
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
Updated•18 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•