Bug 400081 - "Leak gfxFont and gfxTextRun with font-size: 0" [p=cpearce r+sr=roc a1.9=stuart]